Cambios en el framework y estilos css generales, se añadio un chat de ejemplo para comenzar a manejar las sesiones en tiempo real, cambios en frontend y backend.

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,14 +1,7 @@
 /* Tailwind CSS */
 @import "tailwindcss";
 
-body {
-  background-image: url("./assets/img/bg.png");
-  background-size: 100px;
-  font-family: "Kanit", serif;
-  background-position-x: 80px;
-  color: #f8f8f8;
-  box-sizing: border-box;
-}
+
 ::-webkit-scrollbar {
   display: none;
   scrollbar-width: none;
@@ -116,4 +109,7 @@ body {
   .bg-violeta {
     padding: 20px;
   }
+}
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark, sunset;
 }
